locale and reorder LoginPage

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -3,5 +3,17 @@
     "shoppingAppBarTitle": "Shopping List",
     "@shoppingAppBarTitle": {
         "description": "Text shown in the AppBar of the Shopping Page"
-    }
+    },
+    "loginPageInfotext": "Log in to existing account:",
+    "@loginPageInfotext": {
+        "description": "Text shown in the Log in Page"
+    },
+    "signUpPageInfotext": "Create an account:",
+    "@signUpPageInfotexts": {
+        "description": "Text shown in the Sign Up Page"
+    },
+    "authenticationFailure": "Authentication Failure",
+    "@authenticationFailure": {},
+    "signUpFailure": "Sign Up Failure",
+    "@signUpFailure": {}
 }
